@@ -7,6 +7,8 @@ Uploaders: Sjoerd Simons <sjoerd@debian.org>,
            Michael Biebl <biebl@debian.org>,
            Loic Minier <lool@dooz.org>,
            Simon McVittie <smcv@debian.org>
+# libdbus-glib-1-dev and libglib2.0-dev can be omitted for bootstrapping,
+# but if you have them in Build-Depends, more tests can be run
 Build-Depends: autotools-dev,
                debhelper (>= 8),
                dh-autoreconf,
@@ -14,6 +16,8 @@ Build-Depends: autotools-dev,
                dpkg-dev (>= 1.16.0~ubuntu4),
                hardening-includes,
                libexpat-dev,
+               libdbus-glib-1-dev,
+               libglib2.0-dev,
                libselinux1-dev [linux-any],
                libx11-dev,
                xmlto,
