@@ -1,2 +1,3 @@
+debian/tmp/usr/lib/dbus-1.0/test
 debian/tmp/usr/lib/*/dbus-1.0/debug-build/bin
 debian/tmp/usr/lib/*/dbus-1.0/debug-build/lib
